<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pairing_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EFF1F6"
    android:clickable="true">

    <FrameLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/semi_transparent">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/your_pairing_code"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/your_pairing_code_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="72sp"
                tools:text="1234"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/request_code_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/VioletButton"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="visible"
                android:text="@string/obtain_pairing_code"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/your_partner_pairing_code"/>
        <EditText
            android:id="@+id/partner_pairing_code_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp"
            android:ems="2"
            android:maxLength="4"
            android:inputType="numberDecimal"
            tools:text="4321"/>
    </LinearLayout>

    <TextView
        android:id="@+id/countdown_seconds_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_code_is_valid_for"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RobotoMonoHintText"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/countdown_seconds_value_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/countdown_seconds_title"
        app:layout_constraintStart_toEndOf="@+id/countdown_seconds_title"
        style="@style/RobotoMonoHintText"
        android:paddingStart="5dp"
        tools:text="125"/>

</androidx.constraintlayout.widget.ConstraintLayout>