...
    <item android:id="@+id/menu_item_foodstuffs"
        android:title="@string/foodstuffs"
        android:icon="@drawable/ic_products_apple_inactive" />
    <item android:id="@+id/menu_item_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history_inactive" />
    <item android:id="@+id/menu_item_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_inactive" />
</menu>
